--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiEventoAPP">
         <activity
+            android:name=".ventanas.ReportDetail"
+            android:exported="false" />
+        <activity
             android:name=".ventanas.UserDescription"
             android:exported="false" />
         <activity
@@ -45,7 +48,7 @@
             android:name=".ventanas.MenuOrganizador"
             android:exported="false" />
         <activity
-            android:name=".eventdata.VentanaTickets"
+            android:name=".ventanas.VentanaTickets"
             android:exported="false" />
         <activity
             android:name=".ventanas.MenuAdmin"
